cmake_minimum_required(VERSION 3.0.2)
project(joy_teleop)

find_package(catkin REQUIRED COMPONENTS
  joy
  roscpp
  rospy
)


catkin_package(
)

include_directories(
# include
  ${catkin_INCLUDE_DIRS}
)

add_executable(${PROJECT_NAME}_node src/joy_teleop_node.cpp)

add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})

target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})

